## $Id: Makefile.am 1.11 05/11/24 21:24:10+09:00 shinta@area51.linux-ipv6.org $
## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = gnu
EXTRA_DIST = BUGS INSTALL.kernel README.IPsec chkconf_kernel.sh \
	     extras/example-cn.conf extras/example-ha.conf \
             extras/example-mn.conf
SUBDIRS = libnetlink libmissing src man
